starting to populate final thesis skeleton from proposal

--- a/eecs-thesis-template-main/common/tex/globals.tex
+++ b/eecs-thesis-template-main/common/tex/globals.tex
@@ -2,7 +2,7 @@
 % Global variables
 %-----------------------
 \def\covertext{Low Cost Embedded Passive \\ Bistatic Radar Detection Testbed} % Can be split over two lines with //
-\def\titletext{Low Cost Embedded Passive Bistatic Radar Detection Testbed}
+\def\titletext{Low Cost Passive Bistatic Radar Detection Testbed}
 \def\authortext{Flynn Kelly}
 \def\authoremailtext{flynn.kelly@uqconnect.edu.au}
 \def\studentnotext{4741858}
