--- a/eecs-thesis-template-main/common/tex/packages.tex
+++ b/eecs-thesis-template-main/common/tex/packages.tex
@@ -27,3 +27,6 @@
 \usepackage{todonotes} % Pretty TODO items
 \usepackage{xcolor} % Support for color tints, shades, tones, and mixes of arbitrary colors.
 % \usepackage{zi4} % A nice font that isn't Computer Modern
+
+%PERSONAL ADDS
+\usepackage{multicol}
