--- a/eecs-thesis-template-main/thesis/main.tex
+++ b/eecs-thesis-template-main/thesis/main.tex
@@ -48,7 +48,8 @@
 
 
     \bibliographystyle{plain} % Choose your bibliography style
-    \bibliography{../common/references/references} % The name of your .bib file (without extension)
+    \bibliography{../common/references/references} 
+    % USE THE \nocite{*} FOR ALL REFERENCES!!
     \input{sections/02_rear_matter/00_appendix}
 
 \end{document}
