--- a/eecs-thesis-template-main/thesis/sections/00_front_matter/03_abstract.tex
+++ b/eecs-thesis-template-main/thesis/sections/00_front_matter/03_abstract.tex
@@ -1,8 +1,19 @@
 \chapter*{Abstract \label{sec:abstract}}
 \addcontentsline{toc}{chapter}{Abstract}
-\todo[inline]{Abstract: Minimal}
+\todo[inline]{Abstract: MINIMAL VIABLE PRODUCT OVERVIEW \\ broad need, specific need, response aim, response methods, key outcomes and implications.}
 
-NEED TO DRAFT THE ABSTRACT \cite{IOTpassiveRadar}
-// 
+ORIGINAL
+\vspace{0.1cm} \par
+This thesis presents the background, design and implementation of a low cost testbed for a passive radar based detection system. The relatively recent proliferation and cost reduction of software defined radio technology and the increase in single board computer processing capabilities has enabled passive radar detection systems to be implemented in a low cost, and even embedded manner. This project aims to investigate the feasibility of a low cost, embedded passive radar detection system utilising a digital broadcast signal as the illuminator of opportunity. The project will focus on streamlining the signal sampling and processing process through a singular embedded linux testbed setup, without the need for physical higher cost PC hardware at a given RX location. This will be achieved by using a combination of existing embedded IoT hardware, and through using existing DSP (digital signal processing) and radar filtering algorithms. A central feature of this thesis is its low cost nature, with potential for both scalebility but also cost/quality increases. The project will be evaluated based on the successful detection of aerial vehicles in a controlled environment, the latency of the detection system, and the overall cost of the design. The project will also be compared to existing work in the field of passive radar detection, and the potential for future work and scaleability will be explored.
 
-TESTING TESTING
+\vspace{0.22cm}
+RECAST
+\vspace{0.2cm} \par
+Affordable and effecient passive radar based detection, tracking and situational awareness technology is increasing in demand in a range of sectors and academia. As software-defined radio (SDR) technology becomes more widespread and single-board computers (SBCs) continue to gain processing power, the possibility of deploying passive radar systems in an embedded, cost-effective manner has emerged as a critical area of research and commercial development. The growing need for such systems is particularly evident in scenarios where traditional, expensive PC hardware setups at remote receiver (RX) locations are impractical or cost-prohibitive. This has created a specific need for streamlined, scalable systems that can function independently and effectively in various environments.
+
+In response to these demands, this project aims to design and implement a low-cost, embedded passive radar detection testbed prototype system that leverages a digital broadcast signal as an illuminator of opportunity. The chosen approach involves utilizing existing embedded IoT hardware in combination with established digital signal processing (DSP) techniques and radar filtering algorithms. This integrated solution is intended to form a single embedded Linux testbed capable of handling both signal sampling and processing, along with sampling networking thereby eliminating the reliance on costly and complex physical hardware at each RX location.
+
+Key outcomes of this research include the successful detection of aerial vehicles within controlled environments, an analysis of the system's latency, and a comprehensive evaluation of the overall cost-effectiveness of the design. The implications of this work include offering valuable insights into the scalability and cost-quality balance that can be achieved in future passive radar system implementations. Moreover, the project aims to deliver a re-usable, scaleable testbed which can be used to further develop and test passive radar based detection and situational awareness systems.
+
+
+
